# eda-cho

./: .gitignore  README.md  pyproject.toml
notebook/: first.ipynb
src/eda_cho/: cli.py
tests/: test_speech.py
