[project]
name = "eda-cho"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "cho6019", email = "j01040864205@gmail.com"},
]
dependencies = ["pandas>=2.2.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[dependency-groups]
eda = [
    "jupyterlab>=4.3.4",
]
